group exports; need to update validconnections

--- a/web/src/components/Nodes/node.css
+++ b/web/src/components/Nodes/node.css
@@ -206,12 +206,22 @@ textarea.code {
     border: 1px solid #e6a857;
 }
 
+.workflow-node .handles .outputs .react-flow__handle.parameter {
+    background-color: #e6a857;
+    border: 1px solid #e6a857;
+}
+
 .workflow-node .handles .outputs .react-flow__handle {
     background-color: #22A7F0;
     border: 1px solid #22A7F0;
 }
 
-.workflow-node .handles .outputs .react-flow__handle:hover {
+.workflow-node .handles .react-flow__handle:hover {
+    background-color: #d0d0d0;
+    border: 1px solid #d0d0d0;
+}
+
+.workflow-node .handles .react-flow__handle.parameter:hover {
     background-color: #d0d0d0;
     border: 1px solid #d0d0d0;
 }
@@ -219,6 +229,13 @@ textarea.code {
 .workflow-node .handles .inputs .react-flow__handle.react-flow__handle-valid {
     background-color: #d0d0d0;
     border: 1px solid #d0d0d0;
+}
+
+.workflow-node.group {
+    height: 100%;
+    width: 100%;
+    max-width: none;
+    max-height: none;
 }
 
 .control-row {
