--- a/web/src/components/Nodes/node.css
+++ b/web/src/components/Nodes/node.css
@@ -28,8 +28,8 @@ textarea.code {
 .workflow-node {
     min-width: 150px;
     max-width: 400px;
-    max-height: 600px;
     cursor: crosshair;
+    overflow: hidden;
 }
 
 .workflow-node.collapsed {
