--- a/web/src/components/LeftPanel/filesystem.css
+++ b/web/src/components/LeftPanel/filesystem.css
@@ -1,9 +1,14 @@
-.filesystem .ant-tree-node-content-wrapper{
+.filesystem {
+    height: 100%;
+}
+
+.filesystem .ant-tree-node-content-wrapper {
     display: flex;
     flex-direction: row;
     text-overflow: ellipsis;
     white-space: nowrap;
     width: 100%;
+    height: 100%;
 }
 
 .filesystem .ant-tree-title .file-item {
@@ -12,6 +17,10 @@
     white-space: nowrap;
     max-width: 220px;
     display: block;
+}
+
+.filesystem .ant-tree-title {
+    overflow: hidden;
 }
 
 .filesystem .fs-icon {
@@ -25,4 +34,8 @@
     width: auto;
     padding: 1px 4px;
     border-radius: 0%;
+}
+
+.filesystem .ant-tree-node-content-wrapper.ant-tree-node-content-wrapper-normal {
+    overflow: hidden;
 }
