--- a/web/src/components/Nodes/node.css
+++ b/web/src/components/Nodes/node.css
@@ -68,6 +68,7 @@ textarea.code {
     font-size: .6em;
     line-height: 1.2;
     padding-inline-end: 0px;
+    padding: 0;
 }
 
 .workflow-node .widgets .ant-select-arrow {
@@ -93,6 +94,19 @@ textarea.code {
 
 .workflow-node .widgets input.ant-select-selection-search-input {
     height: unset;
+}
+
+.workflow-node .widgets .ant-select-selection-item-remove svg {
+    width: 8px;
+    height: 8px;
+}
+
+.workflow-node .widgets .ant-select-selection-item-content {
+    line-height: 1;
+}
+
+.workflow-node .widgets .ant-select-selection-item {
+    height: 10px;
 }
 
 .workflow-node .collapsed {
