--- a/web/src/components/Nodes/node.css
+++ b/web/src/components/Nodes/node.css
@@ -26,24 +26,20 @@ textarea.code {
 }
 
 .workflow-node {
-    min-width: 150px;
+    min-width: 100px;
     max-width: 400px;
     cursor: crosshair;
     overflow: hidden;
+    padding: 2px;
 }
 
 .workflow-node.collapsed {
-    min-width: 150px;
-    max-width: 150px;
-}
-
-.workflow-node .widgets {
-    margin: 5px 5px;
+    min-width: 100px;
+    max-width: 100px;
 }
 
 .workflow-node .widgets .input-container {
     border-radius: 4px;
-    padding: 0 2px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -117,7 +113,6 @@ textarea.code {
 
 .workflow-node .title {
     font-size: .8em;
-    margin: 2px 5px;
     text-overflow: ellipsis;
     white-space: nowrap;
 }
@@ -164,7 +159,6 @@ textarea.code {
     vertical-align: top;
     line-height: .8;
 }
-
 
 .workflow-node button.ant-btn>span {
     font-size: .6em;
@@ -222,7 +216,6 @@ textarea.code {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    margin: 0 2px;
 }
 
 .workflow-node .handles .inputs {
@@ -327,43 +320,31 @@ textarea.code {
     justify-content: space-between;
 }
 
-.workflow-node .quickview {
-    font-size: .6rem;
-}
-
-.workflow-node .quickview .content {
-    white-space: pre-wrap;
-    margin: 0;
-}
-
-
-.workflow-node .quickview .ant-collapse-header {
-    display: flex;
-    align-items: center;
-    padding: 5px;
-}
-
-.workflow-node .quickview .ant-collapse-header .ant-collapse-expand-icon {
-    padding-right: 5px;
-}
-
-.workflow-node .quickview .ant-collapse-content-box {
-    padding: 5px;
-}
-
-.workflow-node .quickview .ant-descriptions-item-label,.ant-descriptions-item-content {
-    padding: 5px !important;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-}
-
-.workflow-node .quickview .ant-tabs .ant-tabs-tab {
-    font-size: .6rem;
-}
-
 .react-flow__node.react-flow__node-group:has(.collapsed) {
     width: auto !important;
     height: auto !important;
+}
+
+.workflow-node .ant-tabs .ant-tabs-tab {
+    font-size: 8px;
+    padding: 0;
+    margin: 0 4px 0 0;
+}
+
+.workflow-node .ant-tabs .ant-tabs-nav {
+    margin: 0 0 2px 0;
+}
+
+.workflow-node .ant-tabs .ant-tabs-nav .ant-tabs-tab-btn {
+    white-space: nowrap;
+    display: block;
+}
+
+.workflow-node .ant-tabs .ant-tabs-nav .ant-tabs-tab-btn span {
+    display: inline-block;
+}
+
+.workflow-node .ant-tabs .ant-tabs-nav .ant-tabs-tab-btn span.ant-tabs-tab-icon {
+    margin: 0 2px 0 0;
+    vertical-align: top;
 }
