Copying worker files, updating Image components with download button

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -37,3 +37,25 @@ body {
 ::-webkit-scrollbar-corner {
     background: #000;
 }
+
+.toolbar-wrapper {
+    padding: 0px 24px;
+    color: #fff;
+    font-size: 20px;
+    background-color: rgba(0, 0, 0, 0.1);
+    border-radius: 100px;
+}
+
+.toolbar-wrapper .anticon {
+    padding: 12px;
+    cursor: pointer;
+}
+
+.toolbar-wrapper .anticon[disabled] {
+    cursor: not-allowed;
+    opacity: 0.3;
+}
+
+.toolbar-wrapper .anticon:hover {
+    opacity: 0.3;
+}
