Finishing Ray Executor

--- a/web/src/components/Nodes/node.css
+++ b/web/src/components/Nodes/node.css
@@ -43,6 +43,7 @@ textarea.code {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    padding: 0 1px;
 }
 
 .workflow-node .widgets .input-container .ant-typography {
